k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: challenge
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: enduser
  selector:
    deployment: hello
